; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VidsoftVdp1Thread.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vidsoft.c_VidsoftVdp1Thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i64 }

@vidsoft_vdp1_thread_context = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@vdp1backframebuffer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VidsoftVdp1Thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  br label %3

3:                                                ; preds = %13, %1
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vidsoft_vdp1_thread_context, i32 0, i32 4), align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %3
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vidsoft_vdp1_thread_context, i32 0, i32 4), align 8
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vidsoft_vdp1_thread_context, i32 0, i32 3), align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vidsoft_vdp1_thread_context, i32 0, i32 1), align 4
  %9 = call i32 @Vdp1DrawCommands(i32 %7, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vidsoft_vdp1_thread_context, i32 0, i32 2), i32 %8)
  %10 = load i32, i32* @vdp1backframebuffer, align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vidsoft_vdp1_thread_context, i32 0, i32 1), align 4
  %12 = call i32 @memcpy(i32 %10, i32 %11, i32 262144)
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @vidsoft_vdp1_thread_context, i32 0, i32 0), align 8
  br label %13

13:                                               ; preds = %6, %3
  %14 = call i32 (...) @YabThreadSleep()
  br label %3
}

declare dso_local i32 @Vdp1DrawCommands(i32, i32*, i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @YabThreadSleep(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
